# booking

./: .env.example  .gitignore  CLEAR-ALL.bat  CLEAR-DATABASE.bat  CLEAR-LOGS.bat  COORDINATOR_APPROVAL_IMPLEMENTATION.md  COORDINATOR_FLOW_FIXED.md  CopilotReadme.md  PROJECT_RESTRUCTURE_PLAN.md  README.md  START-ALL.bat  STOP-ALL.bat  SYSTEM_STATUS_COMPLETE.md  SYSTEM_STATUS_REPORT_FINAL.md  check_db_schema.py  check_schemas.py  check_therapist_table.py  create_coordinator.py  create_therapy_data.py  database_setup.py  db_migration.py  debug_db_schema.py  debug_users.py  fix_database_roles.py  main.py  minimal_webhook_test.py  pyproject.toml  reassign_therapist_services.py  requirements.txt  simple_test_server.py  simple_webhook_test.py  test_availability_message.json  test_booking2.json  test_booking_flow_with_coordinator.py  test_booking_simplified.py  test_client_booking.json  test_complete_booking_flow.py  test_complete_booking_with_therapist.py  test_complete_info.json  test_confirm2.json  (+29 more)
other_scripts/: complete_cleanup.py  disable_ultramsg_temporarily.py  environment_config.py
readme/: ENHANCED_THERAPIST_WORKFLOW.md  ENVIRONMENT_SETUP_COMPLETE.md
src/therapy_booking/: __init__.py  main.py
src/therapy_booking/api/: __init__.py  appointments.py  health.py  therapist.py  therapists.py  webhooks.py
src/therapy_booking/core/: __init__.py  config.py
src/therapy_booking/models/: __init__.py  database.py  models.py  schemas.py
src/therapy_booking/services/: __init__.py  adk_agent_service.py  booking_service.py  notification_service.py
src/therapy_booking/utils/: __init__.py  helpers.py
startup_scripts/: SETUP-ENV.bat  START-ALL-CLEAN.bat  START-ALL.bat  START-NO-CLOUDFLARE.bat  STATUS.bat  STOP-ALL-CLEAN.bat  STOP-ALL.bat  start_server.bat
test_scripts/: mysql_admin.py  test_adk_config.py  test_all_webhook_types.py  test_conversation.py  test_db.py  test_environment_config.py  test_final_confirmation.py  test_incoming_message.py  test_real_webhook.py  test_speed.py  test_therapist_workflow.py
tests/: README.md  conftest.py  requirements-test.txt  run_tests.py  test.bat
tests/integration/: test_external_integrations.py  test_webhook_api.py
tests/scripts/: __init__.py  test_complete_booking.py  test_natural_date.py  test_webhook_today.py
tests/unit/: test_adk_agent_service.py  test_date_parser.py
therapy_booking_agent/: __init__.py  agent.py  agent_standalone.py
therapy_booking_app/: .env.example  .env.poc  CHATAPI_VS_ULTRAMSG_GUIDE.md  GEMINI_SETUP_GUIDE.md  MESSAGING_ALTERNATIVES_COMPREHENSIVE.md  MESSAGING_FEATURES_RISKS_ANALYSIS.md  PRODUCTION_API_COMPARISON.md  QUICK_POC_SETUP.md  README.md  TOOLS_COMPARISON_TABLE.md  TWILIO_SANDBOX_LIMITATIONS.md  WHATSAPP_API_TOOLS_COMPREHENSIVE.md  WHATSAPP_SETUP_GUIDE.md  main.py  requirements.txt  setup.py  setup_poc.py  start_poc.bat  start_poc.sh  test_adk_gemini.py  test_ultramsg.py
therapy_booking_app/app/api/: therapist.py  webhooks.py
therapy_booking_app/app/models/: database.py  models.py  models_original.py  models_simplified.py  schemas.py
therapy_booking_app/app/services/: adk_agent_service.py  booking_service.py  config_service.py  coordinator_nlp_service.py  error_handler.py  notification_service.py  ultramsg_service.py
therapy_booking_app/app/utils/: date_parser.py  helpers.py
therapy_booking_app/config/: agent_config.json  settings.py
therapy_booking_app/migrations/: 001_initial_schema.py
